# gnn-sparsification-research

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  Notes.ipynb  QUICK_REFERENCE.md  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py  setup.sh
.github/: CODEOWNERS
.github/workflows/: tests.yml
PyG_Tutorials/: 8_Node_Classification_(with_W&B).ipynb
configs/: config.yaml
configs/dataset/: cora.yaml  pubmed.yaml
configs/experiment/: baseline.yaml  jaccard_cora.yaml
configs/model/: gat.yaml  gcn.yaml
configs/sparsifier/: cosine.yaml  jaccard.yaml  random.yaml  spectral.yaml
docs/: ARCHITECTURE.md  MIGRATION.md  QUICKSTART.md
notebooks/: 01_exp_jaccard_sparsification.ipynb
notebooks/exploratory/: 01_Dataset_Loading_and_Preprocessing.ipynb  01_exp_jaccard_sparsification_cora.ipynb  02_Sparsification_Algorithm_Implementation.ipynb  02_exp_jaccard_sparsification_pubmed.ipynb  03_Ablation_Study_Sparsification_vs_Weighting.ipynb  03_Effect_of_Sparsification_on_Topology.ipynb  03_exp_adamic_adar_sparsification_reddit.ipynb  04_Ablation_Study_Sparsification_vs_Weighting.ipynb  04_Result_Analysis_and_Visualization.ipynb  05_Result_Analysis_and_Visualization.ipynb  05_Roman_Empire_Analysis.ipynb  08_HPO_Transfer.ipynb
notebooks/results/: ablation_results.csv  effect_decomposition.csv  summary_statistics.csv
presentation/: laplacian_scene.py  main.tex
report/: main.tex
scripts/: demo_sparsification.py  inject_kaggle_log.py  reproduce_experiments.sh  roman_empire_gpu.py  run_ablation.py  run_ablation_parallel.sh  run_hpo_robustness.py  run_hpo_robustness_parallel.sh  run_hpo_transfer.py  run_hpo_transfer.sh  run_mlp_control_sweep.py  run_mlp_control_sweeps.sh  run_synthetic_hpo.py  run_synthetic_sweeps.sh  sanity_check_approx_er.py  train.py  verify_setup.py
scripts/nb04_ablation/: run_ablation.py  run_ablation_parallel.sh
scripts/nb05_roman_empire/: roman_empire_gpu.py
scripts/nb06_hpo_robustness/: run_hpo_robustness.py  run_hpo_robustness_parallel.sh
scripts/nb07_synthetic/: run_mlp_control_sweep.py  run_mlp_control_sweeps.sh  run_synthetic_hpo.py  run_synthetic_sweeps.sh
scripts/nb08_transfer/: run_real_transfer.py  run_real_transfer_sweep.sh  run_synthetic_transfer.py  run_synthetic_transfer_sweep.sh
src/: __init__.py  data.py
src/evaluation/: __init__.py  statistics.py  topology.py
src/experiments/: __init__.py  ablation.py
src/hpo/: __init__.py  config.py  optuna_helpers.py  probe.py
src/models/: __init__.py  flexible.py  gat.py  gcn.py  gnn.py
src/sparsification/: __init__.py  base.py  baselines.py  core.py  metric.py  metric_backbone.py  metrics.py  random.py  spectral.py
src/training/: __init__.py  hpo_helpers.py  trainer.py
src/utils/: __init__.py  analysis.py  misc.py  (+4 more)
tests/: __init__.py  test_sparsification.py
