[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "gnn-sparsification"
version = "0.1.0"
description = "Graph sparsification for GNNs via metric backbones"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Ilias Laoukili"}
]
keywords = ["graph neural networks", "sparsification", "metric backbone", "GNN"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "torch>=2.0.0",
    "torch-geometric>=2.3.0",
    "networkx>=3.1",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.3.0",
    "pylint>=2.17.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/ilias-la/gnn-sparsification-research"
Documentation = "https://github.com/ilias-la/gnn-sparsification-research#readme"
Repository = "https://github.com/ilias-la/gnn-sparsification-research"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=html --cov-report=term --cov-report=xml -v"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | data
  | notebooks/data
)/
'''

[tool.pylint.main]
max-line-length = 100
disable = [
    "C0103",  # Invalid name (too strict for research code)
    "R0913",  # Too many arguments (common in research)
    "R0914",  # Too many local variables
    "W0212",  # Protected access (useful for testing)
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
